# tiler

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  LOG_FEATURE.md  README.md  RESUME_FEATURE.md  TROUBLESHOOTING.md  conf.toml  docker-compose.yml  go.mod  go.sum  leaflet-local-map.html  main.go  map.go  task.go  test-nanjing.toml  utils.go  zxy2zyx.bat
.claude/: settings.local.json
geojson/: global.geojson  nanshagang.geojson  几内亚.geojson
qt/: CMakeLists.txt  MainWindow.cpp  README.md  build-msvc.bat
qt/.claude/: settings.local.json
qt/include/: Config.h  GeoJsonReader.h  Layer.h  MainWindow.h  Task.h  Tile.h  TileMap.h  Utils.h
qt/src/: Config.cpp  GeoJsonReader.cpp  Layer.cpp  MainWindow.cpp  Task.cpp  Tile.cpp  TileMap.cpp  Utils.cpp  main.cpp
qt/ui/: MainWindow.ui
背景地图下载器/: conf.toml
